# Guardian-AI

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
bridge/: package.json
bridge/src/: index.ts  whatsapp.ts
demo/: index.html  script.js  styles.css
openclaw_finance/: __init__.py  __main__.py
openclaw_finance/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
openclaw_finance/agent/financial/: __init__.py  cache.py  economics_router.py  equity_valuation_router.py  history.py  intent.py  meme_router.py  prediction_market_router.py  profile.py  prompts.py  router.py
openclaw_finance/agent/financial_tools/: __init__.py  akshare_tool.py  earnings_tool.py  economics_data_tool.py  financial_news_tool.py  sec_edgar_tool.py  yfinance_tool.py
openclaw_finance/agent/financial_tools/meme/: __init__.py  meme_create_tool.py  meme_data_tool.py  meme_search_tool.py
openclaw_finance/agent/financial_tools/prediction_market/: __init__.py  prediction_market_data_tool.py  prediction_market_tool.py
openclaw_finance/agent/tools/: __init__.py  base.py  cron.py  filesystem.py  llm_router.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
openclaw_finance/analytics/: __init__.py
openclaw_finance/analytics/economics/analysis/: analytics_engine.py
openclaw_finance/analytics/economics/data/: __init__.py  data_handler.py
openclaw_finance/analytics/economics/fx/: currency_analysis.py  exchange_calculations.py
openclaw_finance/analytics/economics/macro/: capital_flows.py  growth_analysis.py  market_cycles.py  policy_analysis.py  (+1 more)
openclaw_finance/analytics/equity/: __init__.py
openclaw_finance/bus/: __init__.py  queue.py
openclaw_finance/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  mochat.py  qq.py  slack.py  telegram.py  whatsapp.py
openclaw_finance/cli/: __init__.py  commands.py
openclaw_finance/config/: __init__.py  loader.py  schema.py
openclaw_finance/cron/: __init__.py  service.py
openclaw_finance/heartbeat/: __init__.py
openclaw_finance/providers/: __init__.py  litellm_provider.py  openai_codex_provider.py  registry.py
openclaw_finance/session/: __init__.py  manager.py
openclaw_finance/skills/: README.md
openclaw_finance/skills/cron/: SKILL.md
openclaw_finance/skills/earnings/: SKILL.md
openclaw_finance/skills/github/: SKILL.md
openclaw_finance/skills/meme-create/: SKILL.md
openclaw_finance/skills/odds-chart/: SKILL.md
openclaw_finance/skills/summarize/: SKILL.md
openclaw_finance/skills/tmux/: SKILL.md
openclaw_finance/skills/weather/: SKILL.md
openclaw_finance/utils/: __init__.py  helpers.py
(+12 files in other folders)
